[package]
name = "os-terminal"
version = "0.7.0"
edition = "2021"
authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
description = "Beautiful terminal emulator on no-std environment"
keywords = ["terminal", "console", "os", "no-std"]
categories = ["embedded", "gui", "no-std"]
license = "MIT"
homepage = "https://github.com/wenxuanjun/os-terminal"
repository = "https://github.com/wenxuanjun/os-terminal"
exclude = ["/examples", "screenshot.png"]
rust-version = "1.81.0"

[[example]]
name = "terminal"
required-features = ["truetype"]

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[features]
default = ["bitmap"]
bitmap = ["dep:noto-sans-mono-bitmap"]
truetype = ["dep:swash"]

[dependencies]
bitflags = "2.10.0"
lru = "0.16.3"
pc-keyboard = "0.8.0"
unicode-width = "0.2.2"

[dependencies.vte]
version = "0.15.0"
features = ["ansi"]
default-features = false

[dependencies.base64ct]
version = "1.8.3"
features = ["alloc"]

[dependencies.swash]
version = "0.2.6"
default-features = false
optional = true
features = ["render", "libm"]

[dependencies.noto-sans-mono-bitmap]
version = "0.3.2"
features = [
    "regular",
    "bold",
    "size_20",
    "unicode-basic-latin",
    "unicode-specials",
]
optional = true
default-features = false

[dev-dependencies]
keycode = "1.0.0"

[dev-dependencies.arboard]
version = "3.6.1"
features = ["wayland-data-control"]
default-features = false

[dev-dependencies.nix]
version = "0.31.1"
features = ["term", "process", "fs"]

[dev-dependencies.winit]
version = "0.30.12"
features = ["rwh_06", "x11", "wayland"]
default-features = false

[dev-dependencies.softbuffer]
version = "0.4.8"
features = ["x11", "wayland"]
default-features = false
