[package]
name = "os-terminal"
version = "0.7.3"
edition = "2021"
authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
description = "Beautiful terminal emulator on no-std environment"
keywords = ["terminal", "console", "os", "no-std"]
categories = ["embedded", "gui", "no-std"]
license = "MIT"
homepage = "https://github.com/wenxuanjun/os-terminal"
repository = "https://github.com/wenxuanjun/os-terminal"
exclude = ["/examples", "screenshot.png"]
rust-version = "1.81.0"

[[example]]
name = "terminal"
required-features = ["truetype"]

[[example]]
name = "wallpaper"
required-features = ["wallpaper"]

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[features]
default = ["bitmap"]
bitmap = ["dep:noto-sans-mono-bitmap"]
truetype = ["dep:swash"]
wallpaper = ["dep:zune-png"]
woff2 = ["dep:woff2"]

[dependencies]
bitflags = "2.11.0"
lru = "0.16.3"
pc-keyboard = "0.8.0"
unicode-width = "0.2.2"

[dependencies.vte]
version = "0.15.0"
features = ["ansi"]
default-features = false

[dependencies.base64ct]
version = "1.8.3"
features = ["alloc"]

[dependencies.swash]
version = "0.2.6"
default-features = false
optional = true
features = ["render", "libm"]

[dependencies.woff2]
package = "woff2-no-std"
version = "0.3.4"
optional = true

[dependencies.zune-png]
version = "0.5.1"
optional = true
default-features = false

[dependencies.noto-sans-mono-bitmap]
version = "0.3.2"
features = [
    "regular",
    "bold",
    "size_20",
    "unicode-basic-latin",
    "unicode-specials",
]
optional = true
default-features = false

[dev-dependencies]
keycode = "1.0.0"

[dev-dependencies.arboard]
version = "3.6.1"
features = ["wayland-data-control"]
default-features = false

[dev-dependencies.nix]
version = "0.31.2"
features = ["term", "process", "fs"]

[dev-dependencies.winit]
version = "0.30.13"
features = ["rwh_06", "x11", "wayland"]
default-features = false

[dev-dependencies.softbuffer]
version = "0.4.8"
features = ["x11", "wayland"]
default-features = false
